k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asgard
  labels:
    name: asgard
    app: asgard-data-platform
